--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@electron-forge/maker-zip": "^6.0.4",
     "electron": "^22.0.0"
   },
-  "dependencies": { 
+  "dependencies": {
     "@vizuaalog/bulmajs": "^0.12.2",
     "boolean": "^3.2.0",
     "buffer-crc32": "^0.2.13",
@@ -69,6 +69,7 @@
     "semver": "^6.3.0",
     "semver-compare": "^1.0.0",
     "serialize-error": "^7.0.1",
+    "shelljs": "^0.8.5",
     "sprintf-js": "^1.1.2",
     "sumchecker": "^3.0.1",
     "systeminformation": "^5.16.5",
